# PrivAccess-A-Zero-Knowledge-Framework-for-Role-Based-Access-Control

./: .gitignore  README.md  RUN.md  main.py  package-lock.json  package.json  requirements.txt  run.ps1
crypto/: hash_utils.py
priv_access_rs/: Cargo.toml  access_history.json  cert.pem  check_output.txt  check_output_2.txt  key.pem  test_result.txt
priv_access_rs/src/: crypto.rs  main.rs  rbac.rs  zkp.rs
priv_access_rs/static/css/: style.css
priv_access_rs/static/js/: geohash_zkp.js  main.js  zkp.js
priv_access_rs/templates/: door_display.html  index.html  mobile_app.html
rbac/: access_control.py  roles.py
static/js/: geohash_zkp.js
tests/: test_run.py
zkp/: prover.py  verifier.py
zkp_circom/: README.md  generate_proof.js  geohash_prefix.circom  verification_key.json  verify_proof.js
