[package]
name = "priv_access_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
tower-http = { version = "0.5", features = ["fs", "trace"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"
geohash = "0.13.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
qrcode = { version = "0.12", features = ["image"] }
image = "0.24"
base64 = "0.21"

[profile.release]
incremental = false

[profile.dev]
incremental = false
